# brax

./: .gitignore  .python-version  CHANGELOG.md  MANIFEST.in  README.md  README_velocity_constrained_ant.md  analyze_benchmark_results.py  download_wandb_data.py  pypi.yml  pyproject.toml  setup.cfg  setup.py  simple_efficiency_benchmark.py  test_velocity_constrained_ant.py  thesis_plotting_functions.py  train_from_config.py
.github/workflows/: ci.yml  pypi.yaml  pypi.yml
brax/: __init__.py  actuator.py  actuator_test.py  base.py  base_test.py  com.py  com_test.py  contact.py  contact_test.py  fluid.py  fluid_test.py  jumpy.py  kinematics.py  kinematics_test.py  math.py  math_test.py  pytree.py  scan.py  scan_test.py  test_utils.py
brax/ben_utils/: utils.py
brax/envs/: PointResettingGoalRandomHazardLidarSensorObs.py  PointResettingGoalRandomHazardSensorObs.py  SafePointGoal.py  SafePointGoalWeighted.py  __init__.py  acrobot.py  act_sphere.py  ant.py  ant_velocity_constrained.py  ball_fetch_ball.py  base.py  env.py  env_test.py  fast.py  fast_differentiable.py  fetch.py  grasp.py  half_cheetah.py  halfcheetah.py  hopper.py  humanoid.py  humanoid_height_constrained.py  humanoid_standup.py  humanoidstandup.py  inverted_double_pendulum.py  inverted_pendulum.py  piggy_in_the_middle.py  pusher.py  reacher.py  reacherangle.py  sphere_chase.py  sphere_fetch.py  sphere_push.py  swimmer.py  thruster_check.py  to_torch.py  ur5e.py  walker2d.py  wrapper.py  wrappers.py
brax/experimental/: normalization.py
brax/generalized/: base.py  constraint.py  constraint_test.py  dynamics.py  dynamics_test.py  integrator.py  mass.py  mass_test.py  perf_test.py  pipeline.py  pipeline_test.py
brax/geometry/: __init__.py  contact.py  contact_test.py  math.py  math_test.py  mesh.py  mesh_test.py
brax/io/: __init__.py  export.py  file.py  html.py  image.py  image_test.py  json.py  json_test.py  mesh.py  metrics.py  mjcf.py  mjcf_test.py  model.py  model_test.py  npy_file.py  torch.py
brax/mjx/: base.py  perf_test.py  pipeline.py  pipeline_test.py
brax/physics/: actuators.py  base.py  bodies.py  colliders.py  config.proto  config_pb2.py  forces.py  geometry.py  inertia.py  integrators.py  joints.py  math.py  spring_joints.py  system.py  tree.py
brax/positional/: __init__.py  base.py  collisions.py  integrator.py  joints.py  joints_test.py  perf_test.py  pipeline.py  pipeline_test.py
brax/v1/: README.md  (+4 more)
datasets/: README.md
docs/: code_of_conduct.md
examples/: ppo_lagrange_demo.py  ppo_lagrange_example.py  test_lidar_env.py
js/: animator.js  selector.js  system.js  viewer.js
jumpy/: README.md  jumpy.py  setup.py
notebooks/: Brax_v2_Training_Preview.ipynb  ant_velocity_constrained_training.ipynb  basics.ipynb  basics_v2.ipynb  environments.ipynb  gym_pytorch.ipynb  humanoid_height_constrained_training.ipynb  hyperparameter_suggestions.md  improved_config_cells.py  mourad_lag.ipynb  mourad_lag_experiments.ipynb  mourad_lag_new.ipynb  mourad_main.ipynb  multiagent.ipynb  plots.ipynb  pytorch.ipynb  test_safe_point_goal.ipynb  tests.md  thesis_plots.ipynb  training.ipynb  training_torch.ipynb  wandb_agent.ipynb
scripts/: generate_thesis_plots.py
tests/: test_ppo_lagrange_debug.py  test_video_circular.py
thesis/: CHANGELOG.md
tools/: collect_metrics.py  render_env_screenshots.py  run_from_config.py  throughput_sweep.py
v2/: README.md
(+616 files in other folders)
