[tool.poetry]
name = "brax"
version = "0.0.0"
description = ""
authors = ["Place holder <placeholder@google.com>"]

[tool.poetry.dependencies]
python = "3.8^"
jax = "^0.2.17"
flax = "^0.3.4"
protobuf = "^3.17.3"
gym = "^0.18.3"

[tool.poetry.dev-dependencies]
tfp-nightly = {version = "<=0.13.0.dev20210422", extras = ["jax"]}
tensorflow = "^2.5.0"
poetry-dynamic-versioning = "^0.13.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["brax/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
